@@ -212,6 +212,8 @@ moin ... maint reducewiki ...
 
 moin ... migration data ...
 
+moin ... server standalone ...
+
 moin ... xmlrpc mailimport ...
 moin ... xmlrpc remote ...
 
